@@ -32,11 +32,13 @@
 #define PHP_DISP_E_DIVBYZERO ((zend_long) (ULONG) DISP_E_DIVBYZERO)
 #define PHP_DISP_E_OVERFLOW ((zend_long) (ULONG) DISP_E_OVERFLOW)
 #define PHP_DISP_E_BADINDEX ((zend_long) (ULONG) DISP_E_BADINDEX)
+#define PHP_DISP_E_PARAMNOTFOUND ((zend_long) (ULONG) DISP_E_PARAMNOTFOUND)
 #define PHP_MK_E_UNAVAILABLE ((zend_long) (ULONG) MK_E_UNAVAILABLE)
 #else
 #define PHP_DISP_E_DIVBYZERO DISP_E_DIVBYZERO
 #define PHP_DISP_E_OVERFLOW DISP_E_OVERFLOW
 #define PHP_DISP_E_BADINDEX DISP_E_BADINDEX
+#define PHP_DISP_E_PARAMNOTFOUND DISP_E_PARAMNOTFOUND
 #define PHP_MK_E_UNAVAILABLE MK_E_UNAVAILABLE
 #endif
 
