@@ -92,7 +92,7 @@ bogus:
 	}
 }
 
-PHP_COM_DOTNET_API void php_com_variant_from_zval(VARIANT *v, zval *z, int codepage)
+static void php_com_variant_from_zval_ex(VARIANT *v, zval *z, int codepage, VARTYPE vt)
 {
 	php_com_dotnet_object *obj;
 	zend_uchar ztype = IS_NULL;
@@ -145,6 +145,11 @@ PHP_COM_DOTNET_API void php_com_variant_from_zval(VARIANT *v, zval *z, int codep
 			break;
 
 		case IS_LONG:
+			if (vt == VT_ERROR) {
+				V_VT(v) = VT_ERROR;
+				V_ERROR(v) = Z_LVAL_P(z);
+				break;
+			}
 #if SIZEOF_ZEND_LONG == 4
 			V_VT(v) = VT_I4;
 			V_I4(v) = Z_LVAL_P(z);
@@ -170,6 +175,11 @@ PHP_COM_DOTNET_API void php_com_variant_from_zval(VARIANT *v, zval *z, int codep
 			V_VT(v) = VT_NULL;
 			break;
 	}
+}
+
+PHP_COM_DOTNET_API void php_com_variant_from_zval(VARIANT *v, zval *z, int codepage)
+{
+	php_com_variant_from_zval_ex(v, z, codepage, VT_EMPTY);
 }
 
 PHP_COM_DOTNET_API zend_result php_com_zval_from_variant(zval *z, VARIANT *v, int codepage)
@@ -448,7 +458,7 @@ PHP_METHOD(variant, __construct)
 	}
 
 	if (zvalue) {
-		php_com_variant_from_zval(&obj->v, zvalue, obj->code_page);
+		php_com_variant_from_zval_ex(&obj->v, zvalue, obj->code_page, vt);
 	}
 
 	/* Only perform conversion if variant not already of type passed */
@@ -1019,6 +1029,7 @@ PHP_FUNCTION(variant_set_type)
 	zval *zobj;
 	php_com_dotnet_object *obj;
 	/* VARTYPE == unsigned short */ zend_long vt;
+	VARIANT vtmp;
 	HRESULT res;
 
 	if (FAILURE == zend_parse_parameters(ZEND_NUM_ARGS(),
@@ -1027,7 +1038,12 @@ PHP_FUNCTION(variant_set_type)
 	}
 	obj = CDNO_FETCH(zobj);
 
-	res = VariantChangeType(&obj->v, &obj->v, 0, (VARTYPE)vt);
+	if (V_VT(&obj->v) == VT_ERROR) {
+		VariantInit(&vtmp);
+		V_VT(&vtmp) = VT_I4;
+		V_I4(&vtmp) = V_ERROR(&obj->v);
+	}
+	res = VariantChangeType(&obj->v, V_VT(&obj->v) != VT_ERROR ? &obj->v : &vtmp, 0, (VARTYPE)vt);
 
 	if (SUCCEEDED(res)) {
 		if (vt != VT_DISPATCH && obj->typeinfo) {
@@ -1063,7 +1079,11 @@ PHP_FUNCTION(variant_cast)
 	obj = CDNO_FETCH(zobj);
 
 	VariantInit(&vres);
-	res = VariantChangeType(&vres, &obj->v, 0, (VARTYPE)vt);
+	if (V_VT(&obj->v) == VT_ERROR) {
+		V_VT(&vres) = VT_I4;
+		V_I4(&vres) = V_ERROR(&obj->v);
+	}
+	res = VariantChangeType(&vres, V_VT(&vres) == VT_EMPTY ? &obj->v : &vres, 0, (VARTYPE)vt);
 
 	if (SUCCEEDED(res)) {
 		php_com_wrap_variant(return_value, &vres, obj->code_page);
